syntax = "proto3";

package com.skblab.proto;
import "google/protobuf/wrappers.proto";

option java_package = "com.skblab.protoapi";
option java_multiple_files = true;

message EmailLetter {
    string recipientAddress = 1;
    string topic = 2;
    string text = 3;
}